switchboard functionality mostly complete... next step is to add all the listeners to do the fetch requests

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -17,7 +17,7 @@
     <![endif]-->
     
     <center>
-      <h1>SWITCHBOARD</h1>
+      <h1>SWITCHBOARD ... <br>NOTE THIS IS INCOMPLETE FUNCTIONALITY</h1>
         <script src="app.js" async defer></script>
         <button id="switchboard01">Enter User Name</button><br>
         <button id="switchboard02">Return User Name</button><br>
@@ -29,6 +29,18 @@
         <button id="switchboard08">If only one letter left, Return Random Letter with Last Letter in DB</button><br>
         <button id="switchboard09">If all letters scored out, Return a Word</button><br>
         <button id="switchboard10">If all words scored out... Return Congratulations and delete user</button><br>
+        <br><br>
+        <button id="switchboard11">admin Login for Session...autopopulate for now</button><br>
+        <button id="switchboard12">admin Logout for Session</button><br>
+        <button id="switchboard13">admin sees readymades index</button><br>
+        <button id="switchboard14">admin creates a readymade</button><br>
+        <button id="switchboard15">admin updates a readymade</button><br>
+        <button id="switchboard16">admin deletes a readymade</button><br>
+        <button id="switchboard17">admin sees spokenmessages index</button><br>
+        <button id="switchboard18">admin creates a spokenmessage</button><br>
+        <button id="switchboard19">admin updates a spokenmessage</button><br>
+        <button id="switchboard20">admin deletes a spokenmessage</button><br>
+        
     </center>
   </body>
 </html>
