added some form html to supplement switchboard buttons

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -41,6 +41,12 @@
         <button id="switchboard19">admin updates a spokenmessage</button><br>
         <button id="switchboard20">admin deletes a spokenmessage</button><br>
         
+        <form action="">
+          <input type="text" placeholder="this is boilerplate text">
+          <input type="password" placeholder="some password">
+          <input type="submit">
+        </form>
+
     </center>
   </body>
 </html>
