--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -19,7 +19,13 @@
     <center>
       <h1>SWITCHBOARD ... <br>NOTE THIS IS INCOMPLETE FUNCTIONALITY</h1>
         <script src="app.js" async defer></script>
-        <button id="switchboard01">Enter User Name</button><br>
+        
+        <form id="switchboard01" action"/api/v1/users" method="post">
+          <input type="text" placeholder="What is your name?" id="sw01name">
+          <input type="submit">
+        </form><br>
+
+
         <button id="switchboard02">Return User Name</button><br>
         <button id="switchboard03">Enter a Word</button><br>
         <button id="switchboard04">Return a Random Two Letters</button><br>
