--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -20,8 +20,9 @@
       <h1>SWITCHBOARD ... <br>NOTE THIS IS INCOMPLETE FUNCTIONALITY</h1>
         <script src="app.js" async defer></script>
         
+        //THIS IS WHAT I'M TESTING NOW
         <form id="switchboard01" action"/api/v1/users" method="post">
-          <input type="text" placeholder="What is your name?" id="sw01name">
+          <input name="name" type="text" placeholder="What is your name?" id="sw01name">
           <input type="submit">
         </form><br>
 
