--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -18,15 +18,16 @@
     
     <center>
       <h1>SWITCHBOARD ... <br>NOTE THIS IS INCOMPLETE FUNCTIONALITY</h1>
-        <script src="app.js" async defer></script>
         
-        //THIS IS WHAT I'M TESTING NOW
+        <script type="text/javascript" src="app.js" async defer></script>
+
+        THIS IS WHAT I'M TESTING NOW
         <form id="switchboard01" action"/api/v1/users" method="post">
           <input name="name" type="text" placeholder="What is your name?" id="sw01name">
           <input type="submit">
         </form><br>
 
-
+        NOT TESTING BELOW THIS LINE<br>
         <button id="switchboard02">Return User Name</button><br>
         <button id="switchboard03">Enter a Word</button><br>
         <button id="switchboard04">Return a Random Two Letters</button><br>
