still working with listeners and getting data, minor progress in understanding

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -27,8 +27,12 @@
           <input type="submit">
         </form><br>
 
+        <button id="switchboard02">Return A User Name</button><br>
+
+
+
         NOT TESTING BELOW THIS LINE<br>
-        <button id="switchboard02">Return User Name</button><br>
+
         <button id="switchboard03">Enter a Word</button><br>
         <button id="switchboard04">Return a Random Two Letters</button><br>
         <button id="switchboard05">Incremeent Score of Random Letter by 9 and Corresponding Word Activation</button><br>
