fetch working but unable to get results

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -27,7 +27,7 @@
           <input type="submit">
         </form><br>
 
-        <button id="switchboard02">Return A User Name</button><br>
+        <button id="switchboard02">Return A Random User Name</button><br>
 
 
 
