working on fetch post request, can't get data into database

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="app.js" async defer></script>
 
         THIS IS WHAT I'M TESTING NOW
-        <form id="switchboard01" action"/api/v1/users" method="post">
+        <form id="switchboard01" action"/api/v1/users" method="POST">
           <input name="name" type="text" placeholder="What is your name?" id="sw01name">
           <input type="submit">
         </form><br>
