able to alter the database with create, working on destroy

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -21,20 +21,23 @@
         
         <script type="text/javascript" src="app.js" async defer></script>
 
-        THIS IS WHAT I'M TESTING NOW
-        <form id="switchboard01" action"/api/v1/users" data-remote="true" method="POST">
+        THIS WORKS  
+        <form id="switchboard01" data-remote="true" >
           <input name="name" type="text" placeholder="What is your name?" id="sw01name">
           <input type="submit">
         </form><br>
+        <button id="switchboard02">Return A Random User Name</button><br><br>
+        <button id="switchboard02a">Delete Last User</button><br><br>
 
-        <button id="switchboard02">Return A Random User Name</button><br>
 
 
-
-        NOT TESTING BELOW THIS LINE<br>
+       THIS IS WHAT I'M WORKING ON
+       <br>
 
         <button id="switchboard03">Enter a Word</button><br>
         <button id="switchboard04">Return a Random Two Letters</button><br>
+
+        NOT TESTING BELOW THIS LINE<br>
         <button id="switchboard05">Incremeent Score of Random Letter by 9 and Corresponding Word Activation</button><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
         <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
