may need to include sessions to make testing easier

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -26,16 +26,20 @@
           <input name="name" type="text" placeholder="What is your name?" id="sw01name">
           <input type="submit">
         </form><br>
+
         <button id="switchboard02">Return A Random User Name</button><br><br>
+
         <button id="switchboard02a">Delete Last User</button><br><br>
 
-       THIS IS WHAT I'M WORKING ON
+       THIS IS WHAT I'M WORKING ON NOW
        <br>
 
-        <button id="switchboard03">Enter a Word</button><br>
+      <form id="switchboard03">
+        <input name="name" type="text" placeholder="Enter a Word?" id="sw03word">
+        <input type="submit">
+      </form><br>
 
-
-        NOT TESTING BELOW THIS LINE<br>
+        NOT TESTING BELOW THIS LINE<br><br>
         <button id="switchboard04">Return a Random Two Letters</button><br>
 
         
