need to setup sessions

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -21,7 +21,7 @@
         
         <script type="text/javascript" src="app.js" async defer></script>
 
-        THIS WORKS  
+        THESE WORK, BUT NEED TO BE REFACTORED FOR SESSIONS. 
         <form id="switchboard01">
           <input name="name" type="text" placeholder="What is your name?" id="sw01name">
           <input type="submit">
@@ -31,7 +31,7 @@
 
         <button id="switchboard02a">Delete Last User</button><br><br>
 
-       THIS IS WHAT I'M WORKING ON NOW
+       THIS IS ON HOLD UNTIL ABOVE ARE REFACTORED FOR SESSIONS
        <br>
 
       <form id="switchboard03">
