trying to write a function to interpolate the currentUser but its not working

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -27,6 +27,8 @@
           <input type="submit">
         </form><br>
 
+        <button id="switchboard01a">Create a Session from Last User</button><br><br>
+
         <button id="switchboard02">Return A Random User Name</button><br><br>
 
         <button id="switchboard02a">Delete Last User</button><br><br>
