--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -27,9 +27,9 @@
           <input type="submit">
         </form><br>
 
-        <button id="switchboard01a">Create a Session from Last User</button><br><br>
+        <!-- <button id="switchboard01a">Create a Session from Last User</button><br><br> -->
 
-        <button id="switchboard02">Return A Random User Name</button><br><br>
+        <button id="switchboard02">Return User in Session</button><br><br>
 
         <button id="switchboard02a">Delete Last User</button><br><br>
 
