sessions still working in a weird way

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -31,7 +31,7 @@
 
         <button id="switchboard02">Return User in Session</button><br><br>
 
-        <button id="switchboard02a">Delete Last User</button><br><br>
+        <button id="switchboard02a">Delete The User in Session</button><br><br>
 
        THIS IS ON HOLD UNTIL ABOVE ARE REFACTORED FOR SESSIONS
        <br>
