was not actually working... previous variable state held

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -21,7 +21,7 @@
         
         <script type="text/javascript" src="app.js" async defer></script>
 
-        THESE WORK, BUT NEED TO BE REFACTORED FOR SESSIONS. 
+        THESE WORK, BUT ONLY FOR A SINGLE USER ONLINE AT A TIME.
         <form id="switchboard01">
           <input name="name" type="text" placeholder="What is your name?" id="sw01name">
           <input type="submit">
