--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -33,16 +33,16 @@
 
         <button id="switchboard02a">Delete The User in Session</button><br><br>
 
-
+        TESTING TO MAKE SURE WORDS AND LETTERS ARE ENTERED INTO THE DATABASE... OTHERWISE THIS WORKS...<br>
       <form id="switchboard03">
         <input name="name" type="text" placeholder="Enter a Word?" id="sw03word">
         <input type="submit">
       </form><br>
 
-        NOT TESTING BELOW THIS LINE<br><br>
+        TESTING THIS NEXT<br><br>
         <button id="switchboard04">Return a Random Two Letters</button><br>
 
-        
+        NOT TESTING THIS<br><br>
         <button id="switchboard05">Incremeent Score of Random Letter by 9 and Corresponding Word Activation</button><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
         <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
