added comments in app.js

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -33,7 +33,7 @@
 
         <button id="switchboard02a">Delete The User in Session</button><br><br>
 
-        TESTING TO MAKE SURE WORDS AND LETTERS ARE ENTERED INTO THE DATABASE... OTHERWISE THIS WORKS...<br>
+        WORDS AND LETTERS ARE ENTERED INTO THE DATABASE<br>
       <form id="switchboard03">
         <input name="name" type="text" placeholder="Enter a Word?" id="sw03word">
         <input type="submit">
