got letters populating from index method

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -33,7 +33,7 @@
 
         <button id="switchboard02a">Delete The User in Session</button><br><br>
 
-        WORDS AND LETTERS ARE ENTERED INTO THE DATABASE<br>
+        WORDS ARE ENTERED AND PARSED INTO LETTERS IN THE DATABASE<br>
       <form id="switchboard03">
         <input name="name" type="text" placeholder="Enter a Word?" id="sw03word">
         <input type="submit">
@@ -41,7 +41,7 @@
 
         TESTING THIS NEXT<br><br>
         <button id="switchboard04">Return a Random Two Letters</button><br>
-
+        <br><br>
         NOT TESTING THIS<br><br>
         <button id="switchboard05">Incremeent Score of Random Letter by 9 and Corresponding Word Activation</button><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
