creation of the activation switch now works... letters and words are generated from a single click[B

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -39,9 +39,10 @@
         <input type="submit">
       </form><br>
 
-        TESTING THIS NEXT<br><br>
+        THIS CURRENTLY RETURNS ALL LETTERS
         <button id="switchboard04">Return a Random Two Letters</button><br>
         <br><br>
+        TESTING THIS NEXT<br><br>
         NOT TESTING THIS<br><br>
         <button id="switchboard05">Incremeent Score of Random Letter by 9 and Corresponding Word Activation</button><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
