it grabs a random two letters

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -39,12 +39,14 @@
         <input type="submit">
       </form><br>
 
-        THIS CURRENTLY RETURNS ALL LETTERS
+        THIS CURRENTLY RANDOM TWO LETTERS
         <button id="switchboard04">Return a Random Two Letters</button><br>
         <br><br>
         TESTING THIS NEXT<br><br>
-        NOT TESTING THIS<br><br>
+     
         <button id="switchboard05">Incremeent Score of Random Letter by 9 and Corresponding Word Activation</button><br>
+
+        NOT TESTING THIS<br><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
         <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
         <button id="switchboard08">If only one letter left, Return Random Letter with Last Letter in DB</button><br>
