two random letters are now being returned

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -39,8 +39,8 @@
         <input type="submit">
       </form><br>
 
-        THIS CURRENTLY RANDOM TWO LETTERS
-        <button id="switchboard04">Return a Random Two Letters</button><br>
+        THIS RETURNS TWO RANDOM LETTERS
+        <button id="switchboard04">Return Random Two Letters</button><br>
         <br><br>
         TESTING THIS NEXT<br><br>
      
