random letters return working... same as yesterday, but now confirmed via direct localhost request

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -39,12 +39,13 @@
         <input type="submit">
       </form><br>
 
-        THIS RETURNS TWO RANDOM LETTERS
+        THIS RETURNS TWO RANDOM LETTERS FROM THE DATABASE<br>
         <button id="switchboard04">Return Random Two Letters</button><br>
+
         <br><br>
         TESTING THIS NEXT<br><br>
      
-        <button id="switchboard05">Incremeent Score of Random Letter by 9 and Corresponding Word Activation</button><br>
+        <button id="switchboard05">Incremeent Score of Random Letter by 1 and Corresponding Word Activation</button><br>
 
         NOT TESTING THIS<br><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
