preparation logic for the next coding section

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -45,7 +45,7 @@
         <br><br>
         TESTING THIS NEXT<br><br>
      
-        <button id="switchboard05">Incremeent Score of Random Letter by 1 and Corresponding Word Activation</button><br>
+        <button id="switchboard05">ASK FOR THE CORRECT LETTER, IF CORRECT IS SELECTED, UPDATE LETTER SCORE BY 1 AND CORRESPONDING ACTIVATION SWITCH</button><br>
 
         NOT TESTING THIS<br><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
