trying to set up the DOM to change with database data

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -41,11 +41,20 @@
 
         THIS RETURNS TWO RANDOM LETTERS FROM THE DATABASE<br>
         <button id="switchboard04">Return Random Two Letters</button><br>
+        <center>
+          <table>
+            <tr>
+              <td id="swb04option1"> OPTION 1 </td><td id="swb04option2"> OPTION 2 </td>
+            </tr>
+          </table>
 
+        </center>
         <br><br>
         TESTING THIS NEXT<br><br>
      
         <button id="switchboard05">ASK FOR THE CORRECT LETTER, IF CORRECT IS SELECTED, UPDATE LETTER SCORE BY 1 AND CORRESPONDING ACTIVATION SWITCH</button><br>
+
+
 
         NOT TESTING THIS<br><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
