duplicating previous method to experiment with a new approach for getting letters... this version is more interactive

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -40,7 +40,7 @@
       </form><br>
 
         THIS RETURNS TWO RANDOM LETTERS FROM THE DATABASE<br>
-        <button id="switchboard04">Return Random Two Letters</button><br>
+        <button id="switchboard04">Return Random Two Letters from Active User</button><br>
         <center>
           <table>
             <tr>
@@ -49,13 +49,25 @@
           </table>
 
         </center>
-        <br><br>
-        TESTING THIS NEXT<br><br>
-     
+        <br>
+        TESTING THIS NEXT... WILL ULTIMATELY COMBINE THE ABOVE METHOD WITH THIS ONE TO DRY UP CODE<br>
         <button id="switchboard05">ASK FOR THE CORRECT LETTER, IF CORRECT IS SELECTED, UPDATE LETTER SCORE BY 1 AND CORRESPONDING ACTIVATION SWITCH</button><br>
+        <center>
+          <table>
+            <th id="swb05matchThis" colspan="2">select the box that matches this letter</th>
+            <tr>
+              <td id="swb05option1" style="text-align:center"> OPTION 2 </td>
+              <td id="swb05option2" style="text-align:center"> OPTION 1 </td>
+           </tr>
+          </table>
+
+        </center>
 
 
 
+
+
+        <br><br><br>
         NOT TESTING THIS<br><br>
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
         <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
