--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
+    <script type="text/javascript" src="app.js" async defer></script> //formerly in body tag
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -19,7 +20,7 @@
     <center>
       <h1>SWITCHBOARD ... <br>NOTE THIS IS INCOMPLETE FUNCTIONALITY</h1>
         
-        <script type="text/javascript" src="app.js" async defer></script>
+       
 
         THESE WORK, BUT ONLY FOR A SINGLE USER ONLINE AT A TIME.
         <form id="switchboard01">
