ready to build for tomorrow

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -51,7 +51,7 @@
 
         </center>
         <br>
-        TESTING THIS NEXT... WILL ULTIMATELY COMBINE THE ABOVE METHOD WITH THIS ONE TO DRY UP CODE<br>
+        WILL ULTIMATELY COMBINE THE ABOVE METHOD WITH THIS ONE TO DRY UP CODE<br>
         <button id="switchboard05">ASK FOR THE CORRECT LETTER, IF CORRECT IS SELECTED, UPDATE LETTER SCORE BY 1 AND CORRESPONDING ACTIVATION SWITCH</button><br>
         <center>
           <table>
@@ -65,12 +65,12 @@
         </center>
 
 
-
-
-
-        <br><br><br>
-        NOT TESTING THIS<br><br>
+        <br><br>
+        TESTING THIS NEXT
+        <br>
+        
         <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
+        <br><br>NOT TESTING THIS<br><br>
         <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
         <button id="switchboard08">If only one letter left, Return Random Letter with Last Letter in DB</button><br>
         <button id="switchboard09">If all letters scored out, Return a Word</button><br>
