refactoring has begun

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -40,7 +40,7 @@
         <input type="submit">
       </form><br>
 
-        THIS RETURNS TWO RANDOM LETTERS FROM THE DATABASE<br>
+        <!-- THIS RETURNS TWO RANDOM LETTERS FROM THE DATABASE<br>
         <button id="switchboard04">Return Random Two Letters from Active User</button><br>
         <center>
           <table>
@@ -49,9 +49,10 @@
             </tr>
           </table>
 
-        </center>
+        </center> -->
         <br>
-        WILL ULTIMATELY COMBINE THE ABOVE METHOD WITH THIS ONE TO DRY UP CODE<br>
+        <!-- WILL ULTIMATELY COMBINE THE ABOVE METHOD WITH THIS ONE TO DRY UP CODE<br> -->
+        
         <button id="switchboard05">ASK FOR THE CORRECT LETTER, IF CORRECT IS SELECTED, UPDATE LETTER SCORE BY 1 AND CORRESPONDING ACTIVATION SWITCH</button><br>
         <center>
           <table>
