--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -70,11 +70,11 @@
         TESTING THIS NEXT
         <br>
         
-        <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
-        <br><br>NOT TESTING THIS<br><br>
-        <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
+        <!-- <button id="switchboard06">Return a Random Two Words if a Word is Activated... or a Random Two Letters</button><br>
+        <br><br>NOT TESTING THIS<br><br> -->
+        <!-- <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
         <button id="switchboard08">If only one letter left, Return Random Letter with Last Letter in DB</button><br>
-        <button id="switchboard09">If all letters scored out, Return a Word</button><br>
+        <button id="switchboard09">If all letters scored out, Return a Word</button><br> -->
         <button id="switchboard10">If all words scored out... Return Congratulations and delete user</button><br>
         <br><br>
         <button id="switchboard11">admin Login for Session...autopopulate for now</button><br>
