put word population back into letters controller, so I can check cycle now values for control flow re: my async functions. Purpose is to get words in rotation with letters as soon as they're ready

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -75,7 +75,7 @@
         <!-- <button id="switchboard07">Increment Score of a Random Word by 9</button><br>
         <button id="switchboard08">If only one letter left, Return Random Letter with Last Letter in DB</button><br>
         <button id="switchboard09">If all letters scored out, Return a Word</button><br> -->
-        <button id="switchboard10">If all words scored out... Return Congratulations and delete user</button><br>
+        <!-- <button id="switchboard10">If all words scored out... Return Congratulations and delete user</button><br> -->
         <br><br>
         <button id="switchboard11">admin Login for Session...autopopulate for now</button><br>
         <button id="switchboard12">admin Logout for Session</button><br>
