--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
-    <script type="text/javascript" src="app.js" async defer></script> //formerly in body tag
+    <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
   </head>
   <body>
     <!--[if lt IE 7]>
