just cut down on a bunch of work, by deciding to seed the database instead

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -76,7 +76,7 @@
         <button id="switchboard08">If only one letter left, Return Random Letter with Last Letter in DB</button><br>
         <button id="switchboard09">If all letters scored out, Return a Word</button><br> -->
         <!-- <button id="switchboard10">If all words scored out... Return Congratulations and delete user</button><br> -->
-        <br><br>
+        <!-- <br><br>
         <button id="switchboard11">admin Login for Session...autopopulate for now</button><br>
         <button id="switchboard12">admin Logout for Session</button><br>
         <button id="switchboard13">admin sees readymades index</button><br>
@@ -92,7 +92,7 @@
           <input type="text" placeholder="this is boilerplate text">
           <input type="password" placeholder="some password">
           <input type="submit">
-        </form>
+        </form> EVERYTHING IN HERE IS NOW A STRETCH GOAL ... GOING TO JUST SEED THE DATABASE INSTEAD-->
 
     </center>
   </body>
