--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
+    <script type="text/javascript" src="speech.js" async defer></script>
   </head>
   <body>
     <!--[if lt IE 7]>
