choosing voice etc

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -20,7 +20,7 @@
     
 
     <select id="voiceSelect"></select>
-    USE KAREN (en-AU)
+    USE KAREN (en-AU), or Samantha (en-US)... Karen doesn't get XYZ correct rate 0.7, pitch 1.7
     <center>
 
 
