some progress on speech js... but not so much on the oo side

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
     <script type="text/javascript" src="speech.js" async defer></script>
   </head>
+  <main>
   <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -129,4 +130,5 @@
 
     </center>
   </body>
+  </main>
 </html>
