speech js was creating new issues will deal with OO once I can get it all to work

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -15,14 +15,15 @@
   </head>
   <main>
   <body>
+    <center>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
 
-    <select id="voiceSelect"></select>
+    <!-- <select id="voiceSelect"></select>
     USE KAREN (en-AU), or Samantha (en-US)... Karen doesn't get XYZ correct rate 0.7, pitch 1.7
-    <center>
+   
 
 
       <h1>Speech synthesiser</h1>
@@ -49,7 +50,7 @@
       </div>
       </form>
   
-    </body>
+    </body> -->
 
 
       <h1>SWITCHBOARD ... <br>NOTE THIS IS INCOMPLETE FUNCTIONALITY</h1>
