small breakthrough, doesn't speak on load which is a drag, but better than nothing

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
-    <script type="text/javascript" src="speech.js" async defer></script>
+    <!-- <script type="text/javascript" src="speech.js" async defer></script> -->
   </head>
   <main>
   <body>
@@ -52,14 +52,15 @@
   
     </body> -->
 
-
-      <h1>SWITCHBOARD ... <br>NOTE THIS IS INCOMPLETE FUNCTIONALITY</h1>
-        
+    <click2play>
+        <h1 style="height:100vh;width:100vw;">CLICK ANYWHERE TO BEGIN</h1>
+    </click2play>
        
+      <prettyMuchEverything>
 
-        THESE WORK, BUT ONLY FOR A SINGLE USER ONLINE AT A TIME.
         <form id="switchboard01">
-          <input name="name" type="text" placeholder="What is your name?" id="sw01name">
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <input name="name" type="text" placeholder="ENTER YOUR NAME HERE" id="sw01name">
           <input type="submit">
         </form><br>
 
@@ -99,7 +100,7 @@
           </table>
 
         </center>
-
+      </prettyMuchEverything>
         <!-- 
         <br><br>
         TESTING THIS NEXT
