hid manual delete user button as well as return fake session user... they work, and now it deletes the previous user as soon as the page is launched. NOTE, it will be a problem if someone else logs on to the site, so need to expland fake session global variable in db

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -62,7 +62,7 @@
         <form id="switchboard01">
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
           <input name="name" type="text" placeholder="ENTER YOUR NAME HERE" id="sw01name">
-          <input type="submit">
+          <input type="submit" value="SUBMIT">
         </form><br>
 
         <!-- <button id="switchboard01a">Create a Session from Last User</button><br><br> -->
@@ -71,10 +71,11 @@
 
       <wordmaker> 
       <form id="switchboard03">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <input name="name" type="text" placeholder="ENTER A WORD" id="sw03word">
-        <input type="submit">
-      </form><br>
+        <input type="submit" value="ADD THE WORD!">
+      </form><br><br>
+      <button id="switchboard05">FINISH</button><br>
       </wordmaker>
 
         <!-- THIS RETURNS TWO RANDOM LETTERS FROM THE DATABASE<br>
@@ -90,7 +91,7 @@
         <br>
         <!-- WILL ULTIMATELY COMBINE THE ABOVE METHOD WITH THIS ONE TO DRY UP CODE<br> -->
         <letterselect>
-        <button id="switchboard05">ASK FOR THE CORRECT LETTER, IF CORRECT IS SELECTED, UPDATE LETTER SCORE BY 1 AND CORRESPONDING ACTIVATION SWITCH</button><br>
+        
         <center>
           <table>
             <th id="swb05matchThis" colspan="2">select the box that matches this letter</th>
@@ -134,8 +135,9 @@
     </center>
   </body>
   </main>
-
+<center>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <button id="switchboard02">Return User in Session</button><br><br>
-
-        <button id="switchboard02a">Delete The User in Session</button><br><br>
+  <button id="switchboard02a">Delete The User in Session</button><br><br>
+</center>
 </html>
