--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -102,6 +102,13 @@
           </table>
         </letterselect>
         </center>
+        <active_and_delete_user>
+        <center>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <button id="switchboard02">Return User in Session</button><br><br>
+          <button id="switchboard02a">Delete The User in Session</button><br><br>
+        </center>
+        </active_and_delete_user>
       </prettyMuchEverything>
         <!-- 
         <br><br>
@@ -135,9 +142,5 @@
     </center>
   </body>
   </main>
-<center>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <button id="switchboard02">Return User in Session</button><br><br>
-  <button id="switchboard02a">Delete The User in Session</button><br><br>
-</center>
+
 </html>
