moved constructors and placeholders to separate file and nothing broke, so far

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -10,7 +10,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
+    <script type="text/javascript" src="talker.js" async defer></script>
+    <script type="text/javascript" src="constructorsAndPlaceholders.js" async defer></script>
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
+    
+    
     <!-- <script type="text/javascript" src="speech.js" async defer></script> -->
   </head>
   <main>
