--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="app.css">
     <script type="text/javascript" src="talker.js" async defer></script>
     <script type="text/javascript" src="constructorsAndPlaceholders.js" async defer></script>
+    <script type="text/javascript" src="start_here.js" async defer></script>
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
     
     
