--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="app.css">
     <script type="text/javascript" src="talker.js" async defer></script>
     <script type="text/javascript" src="constructorsAndPlaceholders.js" async defer></script>
-    <script type="text/javascript" src="start_here.js" async defer></script>
+    <script type="text/javascript" src="starthere.js" async defer></script>
+    <script type="text/javascript" src="submitNameNiceToMeetYou.js" async defer></script>
+    <script type="text/javascript" src="addWords.js" async defer></script>
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
     
     
