--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="starthere.js" async defer></script>
     <script type="text/javascript" src="submitNameNiceToMeetYou.js" async defer></script>
     <script type="text/javascript" src="addWords.js" async defer></script>
+    <script type="text/javascript" src="gameBegins.js" async defer></script>
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
     
     
