only 5 more functions to put in their own files, then can start refactoring as OO

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -16,6 +16,8 @@
     <script type="text/javascript" src="submitNameNiceToMeetYou.js" async defer></script>
     <script type="text/javascript" src="addWords.js" async defer></script>
     <script type="text/javascript" src="gameBegins.js" async defer></script>
+    <script type="text/javascript" src="setRandom2LettersOrWords.js" async defer></script>
+    <script type="text/javascript" src="random2letterFunc.js" async defer></script>
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
     
     
