--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="gameBegins.js" async defer></script>
     <script type="text/javascript" src="setRandom2LettersOrWords.js" async defer></script>
     <script type="text/javascript" src="random2letterFunc.js" async defer></script>
+    <script type="text/javascript" src="random2wordsFunc.js" async defer></script>
     <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
     
     
