all scripts have been separated into composite files, now need to make them more OO

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -20,7 +20,9 @@
     <script type="text/javascript" src="random2letterFunc.js" async defer></script>
     <script type="text/javascript" src="random2wordsFunc.js" async defer></script>
     <script type="text/javascript" src="checkCycle.js" async defer></script>
-    <script type="text/javascript" src="app.js" async defer></script> <!--this line was formerly in the body tag-->
+    <script type="text/javascript" src="wait.js" async defer></script>
+    <script type="text/javascript" src="rightOrWrong.js" async defer></script>
+    <!-- <script type="text/javascript" src="testing.js" async defer></script> -->
     
     
     <!-- <script type="text/javascript" src="speech.js" async defer></script> -->
