talker refactored OO

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -10,18 +10,19 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
+    <!-- the order below is correct, beware not to alter order lest something might break -->
     <script type="text/javascript" src="talker.js" async defer></script>
-    <script type="text/javascript" src="constructorsAndPlaceholders.js" async defer></script>
-    <script type="text/javascript" src="starthere.js" async defer></script>
-    <script type="text/javascript" src="submitNameNiceToMeetYou.js" async defer></script>
-    <script type="text/javascript" src="addWords.js" async defer></script>
-    <script type="text/javascript" src="gameBegins.js" async defer></script>
-    <script type="text/javascript" src="setRandom2LettersOrWords.js" async defer></script>
-    <script type="text/javascript" src="random2letterFunc.js" async defer></script>
-    <script type="text/javascript" src="random2wordsFunc.js" async defer></script>
-    <script type="text/javascript" src="checkCycle.js" async defer></script>
-    <script type="text/javascript" src="wait.js" async defer></script>
-    <script type="text/javascript" src="rightOrWrong.js" async defer></script>
+    <script type="text/javascript" src="constructorsAndPlaceholders.js" defer></script>
+    <script type="text/javascript" src="starthere.js" defer></script>
+    <script type="text/javascript" src="submitNameNiceToMeetYou.js" defer></script>
+    <script type="text/javascript" src="addWords.js" defer></script>
+    <script type="text/javascript" src="gameBegins.js" defer></script>
+    <script type="text/javascript" src="setRandom2LettersOrWords.js" defer></script>
+    <script type="text/javascript" src="random2letterFunc.js" defer></script>
+    <script type="text/javascript" src="random2wordsFunc.js" defer></script>
+    <script type="text/javascript" src="checkCycle.js" defer></script>
+    <script type="text/javascript" src="wait.js" defer></script>
+    <script type="text/javascript" src="rightOrWrong.js" defer></script> -->
     <!-- <script type="text/javascript" src="testing.js" async defer></script> -->
     
     
