refactored wait.js function into talker.js

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="random2letterFunc.js" defer></script>
     <script type="text/javascript" src="random2wordsFunc.js" defer></script>
     <script type="text/javascript" src="checkCycle.js" defer></script>
-    <script type="text/javascript" src="wait.js" defer></script>
+    <!-- <script type="text/javascript" src="wait.js" defer></script> REFACTORED THIS INTO TALKER CLASS, no longer needed here-->
     <script type="text/javascript" src="rightOrWrong.js" defer></script> -->
     <!-- <script type="text/javascript" src="testing.js" async defer></script> -->
     
