user buttons setup and file renamed

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="app.css">
     <!-- the order below is correct, beware not to alter order lest something might break -->
     <script type="text/javascript" src="talker.js" async defer></script>
-    <script type="text/javascript" src="constructorsAndPlaceholders.js" defer></script>
+    <script type="text/javascript" src="theswitchboard.js" defer></script>
     <script type="text/javascript" src="starthere.js" defer></script>
     <script type="text/javascript" src="submitNameNiceToMeetYou.js" defer></script>
     <script type="text/javascript" src="addWords.js" defer></script>
