attempting properly named adapter object

--- a/my-front-end/index.html
+++ b/my-front-end/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
+  <head> 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
@@ -11,7 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
     <!-- the order below is correct, beware not to alter order lest something might break -->
-    <script type="text/javascript" src="talker.js" async defer></script>
+    <script type="text/javascript" src="adapters.js" defer></script>
+    <script type="text/javascript" src="talker.js" defer></script>
     <script type="text/javascript" src="theswitchboard.js" defer></script>
     <script type="text/javascript" src="starthere.js" defer></script>
     <script type="text/javascript" src="submitNameNiceToMeetYou.js" defer></script>
